--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "windy",
+  "name": "windtails",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -10,7 +10,9 @@
   },
   "dependencies": {
     "autoprefixer": "10.4.14",
-    "next": "13.3.2",
+    "eslint": "8.40.0",
+    "eslint-config-next": "13.4.1",
+    "next": "13.4.1",
     "postcss": "8.4.23",
     "react": "18.2.0",
     "react-dom": "18.2.0",
